--- a/readme.html
+++ b/readme.html
@@ -391,8 +391,8 @@ version of GLFW.</p>
   <li>Added <code>GLFW_OPENGL_DEBUG_CONTEXT</code> hint for debug context creation</li>
   <li>Added <code>GLFW_OPENL_PROFILE</code> hint for context creation using profiles</li>
   <li>Added <code>GLFW_NO_GLU</code> macro for disabling the inclusion of the GLU header by the GLFW header</li>
-  <li>Added platform-independent pixel format selection (not used Mac OS X)</li>
-  <li>Added support and symbols for several additional keys, including Windows/Command keys, pause, caps lock and menu</li>
+  <li>Added platform-independent pixel format selection (not used on Mac OS X)</li>
+  <li>Added support and symbols for several additional keys, including Windows/Command keys, Pause, Caps Lock and Menu</li>
   <li>Added value clamping to <code>glfwOpenWindowHint</code></li>
   <li>Added a number of test programs mostly useful to developers of GLFW</li>
   <li>Added error messages and graceful failure to example programs</li>
@@ -411,6 +411,7 @@ version of GLFW.</p>
   <li>[X11] Added <code>x11-dist-install</code> install target, intended for packagers</li>
   <li>[X11] Added <code>x11-dist-clean</code> build target, intended for developers</li>
   <li>[X11] Added support for <code>GLX_SGIX_fbconfig</code></li>
+  <li>[X11] Added support for user-specified compilation flags via <code>CFLAGS</code></li>
   <li>[X11] Improved configuration and makefile creation logic</li>
   <li>[X11] Removed support for GLX version 1.3 and below</li>
   <li>[X11] Removed unnecessary calls to XSync</li>
@@ -420,19 +421,25 @@ version of GLFW.</p>
   <li>[X11] Bugfix: Window colormap was not freed</li>
   <li>[X11] Bugfix: Close callback was called for <code>glfwCloseWindow</code></li>
   <li>[X11] Bugfix: Misspelt struct member in XF86VidMode code path</li>
-  <li>[X11] Bugfix: Window decorations would not appear using Compiz on Intel hardware</li>
+  <li>[X11] Bugfix: Window decorations would not appear using certain versions of Compiz on Intel hardware</li>
+  <li>[X11] Bugfix: Numeric keypad key symbols would change depending on Num Lock state</li>
   <li>[Carbon] Added Universal Binary build targets for all examples</li>
   <li>[Carbon] Renamed MacOSX port to Carbon</li>
+  <li>[Carbon] Removed support for 10.2 Jaguar</li>
   <li>[Carbon] Deprecated Carbon port</li>
   <li>[Carbon] Bugfix: Using the Dock or menu Quit command did not call the close callback</li>
   <li>[Carbon] Bugfix: Key repeat events were not caught on 10.5 Leopard</li>
-  <li>[Win32] Added Visual C++ project files for all examples and text programs</li>
+  <li>[Carbon] Bugfix: Certain keys were not reported</li>
+  <li>[Carbon] Bugfix: Missing <code>-m32</code> flag caused build failure on 10.6 Snow Leopard</li>
+  <li>[Win32] Added Visual C++ project files for all examples and test programs</li>
+  <li>[Win32] Removed iterative context re-creation attempts for FSAA sample count</li>
   <li>[Win32] Bugfix: The Visual C++ GLFW DLL project file did not use the correct DEF file</li>
   <li>[Win32] Bugfix: WGL extensions were not detected and/or used correctly</li>
   <li>[Win32] Bugfix: Improper use of wParam for <code>WM_SYSCOMMAND</code></li>
   <li>[Win32] Bugfix: Derivatives of stream.c were not cleaned up by compile.bat</li>
   <li>[Win32] Bugfix: Pointer for <code>GetExtensionsStringARB</code> was not initalised</li>
   <li>[Win32] Bugfix: Makefiles contained the wrong GLFW API version</li>
+  <li>[Win32] Bugfix: Numeric keypad key symbols would change depending on Num Lock state</li>
 </ul>
 
 <h3>v2.6</h3>
