--- a/readme.html
+++ b/readme.html
@@ -473,6 +473,7 @@ version of GLFW.</p>
   <li>[X11] Added <code>x11-dist-clean</code> build target, intended for developers</li>
   <li>[X11] Added support for <code>GLX_SGIX_fbconfig</code></li>
   <li>[X11] Added support for user-specified compilation flags via <code>CFLAGS</code></li>
+  <li>[X11] Added documentation of configuration macros</li>
   <li>[X11] Improved configuration and makefile creation logic</li>
   <li>[X11] Removed support for GLX version 1.3 and below</li>
   <li>[X11] Removed unnecessary calls to XSync</li>
