Updated wording of deprecation clause.

--- a/readme.html
+++ b/readme.html
@@ -29,9 +29,9 @@ a library that constitutes a powerful API for handling operating system
 specific tasks, such as opening an OpenGL window, reading keyboard and mouse
 input, creating threads, and much more.</p>
 
-<p>This is expected to be the last major release of the 2.x series, and most
-development will take place in the 3.0 branch from now on. As such, this is
-a legacy branch and requests for additional features will be denied.</p>
+<p>This is expected to be the last major release of the 2.x series and most
+development will take place in the 3.0 branch from now on.  Requests for
+additional features in the 2.x branch will be denied.</p>
 
 <p>The only major feature added in this release is support for OpenGL 3.0.</p>
 
