Removed link target properties.

--- a/readme.html
+++ b/readme.html
@@ -894,23 +894,21 @@ version of GLFW.</p>
 <a href="http://glfw.sourceforge.net/">http://glfw.sourceforge.net/</a>. It contains the latest version of GLFW, news and other information that is
 useful for OpenGL development.</p>
 
-<p>If you have questions related to the use of <b>GLFW</b>, we have a <a
-href="https://sourceforge.net/forum/forum.php?forum_id=247562"
-target="_blank">user's web forum</a>, and a <a
-href="https://lists.sourceforge.net/lists/listinfo/glfw-user"
-target="_blank">user's mailing list</a> on SF.net, and the IRC channel
-<code>#glfw</code> on <a href="http://freenode.net/"
-target="_blank">Freenode</a>.</p>
+<p>If you have questions related to the use of <b>GLFW</b>, we have a
+<a href="https://sourceforge.net/forum/forum.php?forum_id=247562">user's web forum</a>,
+and a
+<a href="https://lists.sourceforge.net/lists/listinfo/glfw-user">user's mailing list</a>
+on SF.net, and the IRC channel <code>#glfw</code> on
+<a href="http://freenode.net/">Freenode</a>.</p>
 
 <p>If you have a bug to report or a feature you'd like to request, please file
-it in the <a href="http://sourceforge.net/tracker/?group_id=72569"
-target="_blank">SF.net trackers</a>.</p>
+it in the
+<a href="http://sourceforge.net/tracker/?group_id=72569">SF.net trackers</a>.</p>
 
 Finally, if you're interested in helping out with the development of
-<b>GLFW</b> or porting it to your favorite platform, we have a <a
-href="https://lists.stacken.kth.se/mailman/listinfo/glfw-dev"
-target="_blank">developer's mailing list</a>, or you could join us on
-<code>#glfw</code>.
+<b>GLFW</b> or porting it to your favorite platform, we have a
+<a href="https://lists.stacken.kth.se/mailman/listinfo/glfw-dev">developer's mailing list</a>,
+or you could join us on <code>#glfw</code>.
 
 
 <p><hr>
@@ -930,20 +928,19 @@ target="_blank">developer's mailing list</a>, or you could join us on
   <li>Keith Bauer, for his invaluable help with porting and maintaining GLFW on
   Mac OS X, and for his many ideas.</li><br>
 
-  <li>Ozzy @ <a href="http://www.orkysquad.org" target="_blank">Orkysquad</a>,
+  <li>Ozzy @ <a href="http://www.orkysquad.org">Orkysquad</a>,
   for his dedication to GLFW, for debugging my source, and for his
   valuable experience with game development.</li><br>
 
   <li>Jeff Molofee, the author of the excellent OpenGL tutorials at <a
-  href="http://nehe.gamedev.net/" target="_blank">NeHe Productions</a>.
+  href="http://nehe.gamedev.net/">NeHe Productions</a>.
   Much of the Windows code of GLFW was originally based on Jeff's
   code.</li><br>
 
-  <li>Douglas C. Schmidt and Irfan Pyarali, for their excellent article <a
-  href="http://www.cs.wustl.edu/~schmidt/win32-cv-1.html"
-  target="_blank">Strategies for Implementing POSIX Condition Variables on
-  Win32</a>, which is the basis for the Win32 condition variable
-  implementation in GLFW.</li><br>
+  <li>Douglas C. Schmidt and Irfan Pyarali, for their excellent article
+  <a href="http://www.cs.wustl.edu/~schmidt/win32-cv-1.html">Strategies for Implementing POSIX Condition Variables on Win32</a>,
+  which is the basis for the Win32 condition variable implementation in
+  GLFW.</li><br>
 
   <li>Bobyshev Alexander and Martins Mozeiko, for the original proposal of
   an FSAA hint and their work on the Win32 implementation of FSAA.</li><br>
@@ -971,7 +968,7 @@ target="_blank">developer's mailing list</a>, or you could join us on
   <li>Matt Sealey, for helping with the MorphOS port.</li><br>
 
   <li>Paul R. Deppe, who helped with Cygwin support, and made an
-  adaption of <a href="http://plib.sourceforge.net/" target="_blank">PLIB</a>
+  adaption of <a href="http://plib.sourceforge.net/">PLIB</a>
   so that it can use GLFW (instead of GLUT).</li><br>
 
   <li>Jarrod Davis, for the Delphi port of GLFW.</li><br>
@@ -992,13 +989,12 @@ target="_blank">developer's mailing list</a>, or you could join us on
 
   <li>Дмитри Малышев, for the idea of a GLFW_NO_GLU macro.</li><br>
 
-  <li><a href="http://www.opengl.org/" target="_blank">www.opengl.org</a>,
+  <li><a href="http://www.opengl.org/">www.opengl.org</a>,
   and all the people on the discussion forums there that have provided
   help during the development of GLFW.</li><br>
 
-  <li>The <a href="http://msdn.microsoft.com/library/"
-  target="_blank">MSDN Online Linrary</a>, which was used extensively for
-  Windows development.</li><br>
+  <li>The <a href="http://msdn.microsoft.com/library/">MSDN Online Linrary</a>,
+  which was used extensively for Windows development.</li><br>
 
   <li>All the feedback from the GLFW community - thank you!</li><br>
 </ul>
