Added caveat for OpenGL 3.0 on Mac OS X.

--- a/readme.html
+++ b/readme.html
@@ -33,7 +33,9 @@ input, creating threads, and much more.</p>
 development will take place in the 3.0 branch from now on.  Requests for
 additional features in the 2.x branch will be denied.</p>
 
-<p>The only major feature added in this release is support for OpenGL 3.0.</p>
+<p>The only major feature added in this release is support for OpenGL 3.0.
+Note that as Mac OS X does not yet support OpenGL 3.0, attempts to create such
+a context will fail.</p>
 
 <p><hr>
 
