Added macro for including GL3 header.

--- a/readme.html
+++ b/readme.html
@@ -454,6 +454,7 @@ version of GLFW.</p>
   <li>Added <code>GLFW_OPENGL_DEBUG_CONTEXT</code> hint for debug context creation</li>
   <li>Added <code>GLFW_OPENL_PROFILE</code> hint for context creation using profiles</li>
   <li>Added <code>GLFW_NO_GLU</code> macro for disabling the inclusion of the GLU header by the GLFW header</li>
+  <li>Added <code>GLFW_INCLUDE_GL3</code> macro for using the new <code>GL3/gl3.h</code> header instead of the regular <code>GL/gl.h</code> (not supported on Mac OS X)</li>
   <li>Added platform-independent pixel format selection (not used on Mac OS X)</li>
   <li>Added support and symbols for several additional keys, including Windows/Command keys, Pause, Caps Lock and Menu</li>
   <li>Added value clamping to <code>glfwOpenWindowHint</code></li>
