--- a/readme.html
+++ b/readme.html
@@ -488,6 +488,7 @@ version of GLFW.</p>
   <li>[X11] Bugfix: Misspelt struct member in XF86VidMode code path</li>
   <li>[X11] Bugfix: Window decorations would not appear using certain versions of Compiz on Intel hardware</li>
   <li>[X11] Bugfix: Numeric keypad key symbols would change depending on Num Lock state</li>
+  <li>[X11] Bugfix: Hidden cursor position snapped back when halfway from window center to edge</li>
   <li>[Carbon] Added Universal Binary build targets for all examples</li>
   <li>[Carbon] Renamed MacOSX port to Carbon</li>
   <li>[Carbon] Removed support for 10.2 Jaguar</li>
