--- a/readme.html
+++ b/readme.html
@@ -473,6 +473,7 @@ version of GLFW.</p>
   <li>Updated Pascal (formerly Delphi) bindings to support more compilers</li>
   <li>Fixed a number of compiler warnings in the example programs</li>
   <li>OpenGL version is now only parsed once, at window creation time</li>
+  <li>Changed <code>glfwSwapBuffers</code> to call <code>glfwPollEvents</code> <em>after</em> buffer swap</li>
   <li>Changed all comments in public header file to plain C style</li>
   <li>Removed the keytest example program, which was superceded by the events test</li>
   <li>Removed deprecated AmigaOS and DOS ports</li>
