Added note on missing -mmacosx-version-min flag for Carbon.

--- a/readme.html
+++ b/readme.html
@@ -506,6 +506,7 @@ version of GLFW.</p>
   <li>[Carbon] Bugfix: Key repeat events were not caught on 10.5 Leopard</li>
   <li>[Carbon] Bugfix: Certain keys were not reported</li>
   <li>[Carbon] Bugfix: Missing <code>-m32</code> flag caused build failure on 10.6 Snow Leopard</li>
+  <li>[Carbon] Bugfix: Missing <code>-mmacosx-version-min</code> flag caused build failure on 10.5 Leopard</li>
   <li>[Win32] Added Visual C++ project files for all examples and test programs</li>
   <li>[Win32] Removed iterative context re-creation attempts for FSAA sample count</li>
   <li>[Win32] Bugfix: The Visual C++ GLFW DLL project file did not use the correct DEF file</li>
