--- a/readme.html
+++ b/readme.html
@@ -475,7 +475,7 @@ version of GLFW.</p>
   <li>OpenGL version is now only parsed once, at window creation time</li>
   <li>Changed <code>glfwSwapBuffers</code> to call <code>glfwPollEvents</code> <em>after</em> buffer swap</li>
   <li>Changed all comments in public header file to plain C style</li>
-  <li>Removed the keytest example program, which was superceded by the events test</li>
+  <li>Removed the keytest example program, which was superseded by the events test</li>
   <li>Removed deprecated AmigaOS and DOS ports</li>
   <li>Removed all FPS counters from example programs</li>
   <li>Removed all unmaintained language bindings</li>
@@ -513,7 +513,7 @@ version of GLFW.</p>
   <li>[Win32] Bugfix: WGL extensions were not detected and/or used correctly</li>
   <li>[Win32] Bugfix: Improper use of wParam for <code>WM_SYSCOMMAND</code></li>
   <li>[Win32] Bugfix: Derivatives of stream.c were not cleaned up by compile.bat</li>
-  <li>[Win32] Bugfix: Pointer for <code>GetExtensionsStringARB</code> was not initalised</li>
+  <li>[Win32] Bugfix: Pointer for <code>GetExtensionsStringARB</code> was not initialized</li>
   <li>[Win32] Bugfix: Makefiles contained the wrong GLFW API version</li>
   <li>[Win32] Bugfix: Numeric keypad key symbols would change depending on Num Lock state</li>
 </ul>
