Corrected changelog entry.

--- a/readme.html
+++ b/readme.html
@@ -465,7 +465,7 @@ version of GLFW.</p>
   <li>Added <code>GLFW_INCLUDE_GL3</code> macro for using the new <code>GL3/gl3.h</code> header instead of the regular <code>GL/gl.h</code> (not supported on Mac OS X)</li>
   <li>Added platform-independent pixel format selection (not used on Mac OS X)</li>
   <li>Added support and symbols for several additional keys, including Windows/Command keys, Pause, Caps Lock and Menu</li>
-  <li>Added value clamping to <code>glfwOpenWindowHint</code></li>
+  <li>Added conservative value clamping to <code>glfwOpenWindowHint</code></li>
   <li>Added a number of test programs mostly useful to developers of GLFW</li>
   <li>Added error messages and graceful failure to example programs</li>
   <li>Added Cocoa port for Mac OS X</li>
