--- a/readme.html
+++ b/readme.html
@@ -257,7 +257,7 @@ environment variable <b>PREFIX</b> appropriately when running make.</p>
 <p>Note that the shared library is not installed by default, as you really
 should think twice before using it. GLFW is very small and shared library
 distribution on Unix outside of packaging systems is quite tricky. The GLFW
-license also allows static linking without requiring your to share your
+license also allows static linking without requiring you to share your
 code.</p>
 
 <p>However, if you're a *nix distribution packager, use a language binding or
