--- a/readme.html
+++ b/readme.html
@@ -23,11 +23,11 @@
 <a name="sec1">
 <h2>1. Introduction</h2>
 
-<p>Welcome to version 2.7 of the GLFW OpenGL framework. GLFW is a free, open
-source, portable framework for OpenGL application development. In short, it is
-a library that constitutes a powerful API for handling operating system
-specific tasks, such as opening an OpenGL window, reading keyboard and mouse
-input, creating threads, and much more.</p>
+<p>Welcome to version 2.7 of the GLFW OpenGL framework, codenamed "Godot". GLFW
+is a free, open source, portable framework for OpenGL application development.
+In short, it is a library that constitutes a powerful API for handling
+operating system specific tasks, such as opening an OpenGL window, reading
+keyboard and mouse input, creating threads, and much more.</p>
 
 <p>This is expected to be the last major release of the 2.x series and most
 development will take place in the 3.0 branch from now on.  Requests for
@@ -58,14 +58,13 @@ DLL will also be compiled.</p>
 <p>Currently supported compilers and systems are:
 
 <ol>
-  <li>Borland C++ Builder compiler 5.x for Windows</li>
-  <li>Cygwin (GCC) for Windows</li>
+  <li>Microsoft Visual C++ 9.0 and above</li>
+  <li>MSYS or Cygwin for Windows</li>
+  <li>Bare MinGW for Windows</li>
   <li>LCC-Win32 for Windows</li>
-  <li>MinGW with MSYS for Windows</li>
   <li>OpenWatcom for Windows</li>
-  <li>Unix or Unix-like systems running the X Window System (auto detect
-      compiler, or force GCC)</li>
-  <li>Apple GCC on Mac OS X</li>
+  <li>Unix or Unix-like systems running the X Window System</li>
+  <li>Apple GCC or Clang on Mac OS X</li>
 </ol>
 
 <p>There are also project files available for Microsoft Visual C++ 9.0 in the
@@ -81,44 +80,49 @@ modifications or additions to the source and/or makefiles in order to make GLFW
 compile successfully, we would very much like to know what you had to do.</p>
 
 
-<h3>2.1 Microsoft Visual C++ 9.0 and above</h3>
+<h3>2.1 Microsoft Windows</h3>
+
+<p>When building GLFW as a DLL (dynamic link library), regardless of which
+build environment you use, all compilation units need to have the
+<code>GLFW_BUILD_DLL</code> macro defined.</p>
+
+<h4>2.1.1 Microsoft Visual C++ 9.0 and above</h4>
 
 <p>Project files for both the static and dynamic versions of the GLFW library
 are provided in the <b>support/msvc90</b> directory, as well as project files
 for all example and test programs.</p>
 
 
-<h3>2.2 MinGW/MSYS on Windows</h3>
+<h4>2.1.2 MSYS or Cygwin on Windows</h4>
 
-<p>Use the MSYS shell and make for compiling GLFW.</p>
+<p>GLFW can be cross-compiled to native Win32 code using the Cygwin
+environment.  The Cygwin build path will also work on MinGW with MSYS.</p>
 
-<p>Under Windows 98, the MinGW make program may set the $(MAKE) variable
-incorrectly. To remedy this, uncomment the line at the beginning of the top
-level Makefile that says MAKE = make (possibly replacing make with some other
-name, e.g. mingw32-make).</p>
-
-
-<h3>2.3 Cygwin on Windows</h3>
-
-<p>The Cygwin makefile was designed to run from a Cygwin bash shell.  You
-<em>cannot</em> use an MS-DOS prompt (or NT cmd prompt) to compile GLFW with the
-win32-cygwin option. Similarly, the win32-clean option will not work from a
-Cygwin shell, which is why there is a special cygwin-clean option.</p>
+<p>Open a Cygwin or MSYS shell, enter the GLFW root directory and run make with
+the <code>win32-cygwin</code> target.</p>
 
 
-<h3>2.4 OpenWatcom on Windows</h3>
+<h4>2.1.3 Bare MinGW on Windows</h4>
+
+<p>This uses only the stock MinGW installation and uses the Windows command
+line environment for file management.  Open a regular command prompt, enter the
+GLFW root directory and run the MinGW make program with the
+<code>win32-mingw</code> target.</p>
+
+
+<h4>2.1.4 OpenWatcom on Windows</h4>
 
 <p>In order to compile GLFW successfully with OpenWatcom (for Windows),
-execute "nmake MAKE=nmake win32-ow" in the GLFW root directory. Also make
-sure that you have all your environment variables set up correctly. It is
-the default option when installing OpenWatcom to permanently set up all
-the required environment variables. If nmake does not work, you probably
-have to run "WATCOM\setvars.bat" from the command prompt before executing
-nmake, where WATCOM is the directory in which you installed OpenWatcom
-(e.g. C:\Watcom).</p>
+execute <code>nmake MAKE=nmake win32-ow</code> in the GLFW root directory. Also
+make sure that you have all your environment variables set up correctly. It is
+the default option when installing OpenWatcom to permanently set up all the
+required environment variables. If nmake does not work, you probably have to
+run <code>WATCOM\setvars.bat</code> from the command prompt before executing
+nmake, where WATCOM is the directory in which you installed OpenWatcom (e.g.
+C:\Watcom).</p>
 
 
-<h3>2.5 X11 on Unix-like systems</h3>
+<h3>2.2 X11 on Unix-like systems</h3>
 
 <p>Compiler and link library capabilities are auto-detected with a script
 called <b>compile.sh</b>.  Note that you don't need to run this script
@@ -130,9 +134,13 @@ called from the top level Makefile.</p>
 
 <p>If you wish to customize the compilation or link flags for GLFW, set the
 <code>CFLAGS</code> or <code>LFLAGS</code> environment variables as needed
-before building the library.  If you have already configured your source
-tree, you can reset it to an un-configured state with the make target
-<code>x11-dist-clean</code>.
+before building the library.</p>
+
+<p>If you wish to use a certain compiler, set the <code>CC</code> environment
+variable before building the library.</p>
+
+<p>If you have already configured your source tree, you can reset it to an
+un-configured state with the <code>x11-dist-clean</code> make target.</p>
 
 <p>If you are making your own build setup for GLFW, you need to be aware of the
 various preprocessor symbols that the bundled makefiles use to enable various
@@ -196,7 +204,7 @@ prefix.</p>
 </table>
 
 
-<h3>2.6 Apple GCC on Mac OS X</h3>
+<h3>2.3 Apple GCC or Clang on Mac OS X</h3>
 
 <p>To compile GLFW for Mac OS X, you will need to have installed the Developer
 Tools.  A version of these tools can be found on your Mac OS X disc, with newer
@@ -468,7 +476,7 @@ version of GLFW.</p>
   <li>Added conservative value clamping to <code>glfwOpenWindowHint</code></li>
   <li>Added a number of test programs mostly useful to developers of GLFW</li>
   <li>Added error messages and graceful failure to example programs</li>
-  <li>Added Cocoa port for Mac OS X</li>
+  <li>Added Cocoa port for Mac OS X 10.5 Leopard and later</li>
   <li>Added vsync to all relevant example programs</li>
   <li>Updated Pascal (formerly Delphi) bindings to support more compilers</li>
   <li>Fixed a number of compiler warnings in the example programs</li>
@@ -481,8 +489,8 @@ version of GLFW.</p>
   <li>Removed all unmaintained language bindings</li>
   <li>Removed support for Pelles C</li>
   <li>Removed broken Microsoft Visual C++ 6.0 build path</li>
-  <li>[X11] Added <code>x11-dist-install</code> install target, intended for packagers</li>
-  <li>[X11] Added <code>x11-dist-clean</code> build target, intended for developers</li>
+  <li>[X11] Added <code>x11-dist-install</code> install target, intended for packagers of GLFW</li>
+  <li>[X11] Added <code>x11-dist-clean</code> build target, intended for developers of GLFW</li>
   <li>[X11] Added support for <code>GLX_SGIX_fbconfig</code></li>
   <li>[X11] Added support for user-specified compilation flags via <code>CFLAGS</code></li>
   <li>[X11] Added documentation of configuration macros</li>
@@ -498,6 +506,7 @@ version of GLFW.</p>
   <li>[X11] Bugfix: Window decorations would not appear using certain versions of Compiz on Intel hardware</li>
   <li>[X11] Bugfix: Numeric keypad key symbols would change depending on Num Lock state</li>
   <li>[X11] Bugfix: Hidden cursor position snapped back when halfway from window center to edge</li>
+  <li>[X11] Bugfix: The response to <code>_NET_WM_PING</code> events was malformed</li>
   <li>[Carbon] Added Universal Binary build targets for all examples</li>
   <li>[Carbon] Renamed MacOSX port to Carbon</li>
   <li>[Carbon] Removed support for 10.2 Jaguar</li>
