Clarified CFLAGS, LFLAGS and CC language.

--- a/readme.html
+++ b/readme.html
@@ -147,10 +147,12 @@ called from the top level Makefile.</p>
 
 <p>If you wish to customize the compilation or link flags for GLFW, set the
 <code>CFLAGS</code> or <code>LFLAGS</code> environment variables as needed
-before building the library.</p>
+before building the library.  These flags will be picked up and added to the
+generated <code>Makefile.x11</code> files.</p>
 
 <p>If you wish to use a certain compiler, set the <code>CC</code> environment
-variable before building the library.</p>
+variable before building the library.  This will also be stored in the
+generated <code>Makefile.x11</code> files.</p>
 
 <p>If you have already configured your source tree, you can reset it to an
 un-configured state with the <code>x11-dist-clean</code> make target.</p>
