--- a/readme.html
+++ b/readme.html
@@ -503,7 +503,7 @@ version of GLFW.</p>
   <li>Added Cocoa port for Mac OS X 10.5 Leopard and later</li>
   <li>Added vsync to all relevant example programs</li>
   <li>Updated Pascal (formerly Delphi) bindings to support more compilers</li>
-  <li>Clarified and expanded the text of the Reference Manual</li>
+  <li>Clarified and expanded the the User's Guide and Reference Manual</li>
   <li>Fixed a number of compiler warnings in the example programs</li>
   <li>OpenGL version is now only parsed once, at window creation time</li>
   <li>Changed <code>glfwSwapBuffers</code> to call <code>glfwPollEvents</code> <em>after</em> buffer swap</li>
