Updated project URL to www.glfw.org.

--- a/readme.html
+++ b/readme.html
@@ -940,8 +940,9 @@ version of GLFW.</p>
 <h2>7. Contacting the project</h2>
 
 <p>The official GLFW web site can be found here:
-<a href="http://glfw.sourceforge.net/">http://glfw.sourceforge.net/</a>. It contains the latest version of GLFW, news and other information that is
-useful for OpenGL development.</p>
+<a href="http://www.glfw.org/">http://www.glfw.org/</a>. It contains the latest
+version of GLFW, news and other information that is useful for OpenGL
+development.</p>
 
 <p>If you have questions related to the use of <b>GLFW</b>, we have a
 <a href="https://sourceforge.net/forum/forum.php?forum_id=247562">user's web forum</a>,
